tests/rand/05-fail-for-struct.stderr
error: proc-macro derive panicked
 --> tests/rand/05-fail-for-struct.rs:3:10
  |
3 | #[derive(Rand, PartialEq, Eq, Hash, Debug)]
  |          ^^^^
  |
  = help: message: Only enums with unit-like variants are supported
